# Key4ce

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  structure.md
key4ce/: __init__.py  __main__.py  app.py  logging.py
key4ce/config/: __init__.py  defaults.py  manager.py
key4ce/content/: __init__.py  base.py  builtin.py  focus.py  loader.py
key4ce/core/: __init__.py  analyzer.py  engine.py  recorder.py
key4ce/data/: __init__.py  database.py  db.py  models.py
key4ce/themes/: themes.py
key4ce/ui/: __init__.py  app.py
key4ce/ui/animations/: __init__.py  base.py  effects.py
key4ce/ui/components/: __init__.py  graph.py  heatmap.py  progress.py
key4ce/ui/screens/: __init__.py  main_menu.py  menu.py  onboarding.py  practice_select.py  results.py  results_screen.py  settings_screen.py  typing.py  typing_screen.py
tests/: __init__.py  test_analyzer.py  test_content.py  test_database.py  test_engine.py
