[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "key4ce"
version = "2.0.0"
description = "A terminal typing trainer that actually makes you better"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Key4ce Team" }
]
keywords = ["typing", "terminal", "tui", "practice", "trainer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.0",
    "readchar>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
key4ce = "key4ce.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["key4ce"]

[tool.pytest.ini_options]
testpaths = ["tests"]
